Removed bin and obj folders

--- a/Dalyan.WebApi/Controllers/ControllerService.tt
+++ b/Dalyan.WebApi/Controllers/ControllerService.tt
@@ -124,9 +124,7 @@ public class CodeStringGenerator
     {
         List<string> result = new List<string>(); 
         XmlDocument doc = new XmlDocument();
-        //string absolutePath = Path.GetFullPath(@"D:\Temp\Dalyan\Main\Dalyan.Entities\Defination\Tables.xml");    
-		string absolutePath = Path.GetFullPath(Path.GetDirectoryName("..//Defination//Tables.xml"));    
-				            
+		string absolutePath = Path.GetFullPath(Path.GetDirectoryName("..//..//Dalyan.Entities//Definition//Tables.xml"));  				            
         doc.Load(absolutePath);
         foreach (XmlNode node in doc.SelectNodes("/Tables/Table"))
         {
@@ -138,7 +136,7 @@ public class CodeStringGenerator
 	public bool ControlTable(string tableName)
     {
 		XmlDocument doc = new XmlDocument();
-        string absolutePath = Path.GetFullPath(@"D:\Github\Dalyan\Dalyan.Entities\Defination\Tables.xml");                
+		string absolutePath = Path.GetFullPath(Path.GetDirectoryName("..//..//Dalyan.Entities//Definition//Tables.xml"));            
         doc.Load(absolutePath);
 		XmlNodeList xnList = doc.SelectNodes("/Tables/Table[@Name='" + tableName +"']");
 		foreach (XmlNode xn in xnList)
