--- a/Dalyan.Entities/Models/DbModel.tt
+++ b/Dalyan.Entities/Models/DbModel.tt
@@ -258,8 +258,7 @@ public class CodeStringGenerator
     {
         List<string> result = new List<string>(); 
         XmlDocument doc = new XmlDocument();
-		string absolutePath = Path.GetFullPath(Path.GetDirectoryName("..//Defination//Tables.xml"));    
-				            
+		string absolutePath = Path.GetFullPath(Path.GetDirectoryName("..//..//Dalyan.Entities//Definition//Tables.xml"));   
         doc.Load(absolutePath);
         foreach (XmlNode node in doc.SelectNodes("/Tables/Table"))
         {
@@ -271,7 +270,7 @@ public class CodeStringGenerator
 	public bool ControlTable(string tableName)
     {
 		XmlDocument doc = new XmlDocument();
-        string absolutePath = Path.GetFullPath(@"D:\GitHub\Dalyan\Dalyan.Entities\Defination\Tables.xml");                
+		string absolutePath = Path.GetFullPath(Path.GetDirectoryName("..//..//Dalyan.Entities//Definition//Tables.xml"));                
         doc.Load(absolutePath);
 		XmlNodeList xnList = doc.SelectNodes("/Tables/Table[@Name='" + tableName +"']");
 		foreach (XmlNode xn in xnList)
